--- a/CNPM/QuanLyChoThueOto/QuanLyChoThueOto/packages.config
+++ b/CNPM/QuanLyChoThueOto/QuanLyChoThueOto/packages.config
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.900.148" targetFramework="net472" />
+  <package id="Microsoft.ReportViewer.WinForms.v12" version="12.0.0.1" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
+  <package id="Syncfusion.Compression.Base" version="18.4.0.35" targetFramework="net472" />
+  <package id="Syncfusion.Licensing" version="18.4.0.35" targetFramework="net472" />
+  <package id="Syncfusion.Pdf.WinForms" version="18.4.0.35" targetFramework="net472" />
 </packages>
