fasdfadf Signed-off-by: ngochoang010900 <ngochoang0109giolinh@gmail.com>

--- a/CNPM/QuanLyChoThueOto/QuanLyChoThueOto/QuanLyChoThueOto.csproj
+++ b/CNPM/QuanLyChoThueOto/QuanLyChoThueOto/QuanLyChoThueOto.csproj
@@ -131,6 +131,12 @@
     <Compile Include="Models\NhanVien.cs">
       <DependentUpon>DBQuanlythueoto.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>DBQuanlythueoto.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sp_helpdiagrams_Result.cs">
+      <DependentUpon>DBQuanlythueoto.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\sysdiagram.cs">
       <DependentUpon>DBQuanlythueoto.tt</DependentUpon>
     </Compile>
